gccida/g2/convert_from_eh_region_ranges_1
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges_1/src/except.c:1791:4: error: expected ';' after expression
rtx v7; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges_1/src/except.c:1791:5: error: use of undeclared identifier 'v7'
rtx v7; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges_1/src/except.c:1797:1: error: must use 'enum' tag to refer to type 'eh_region_type'
eh_region_type type; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges_1/src/except.c:1810:1: error: use of undeclared identifier 'v7'
v7 = rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges_1/src/except.c:1812:17: error: use of undeclared identifier 'v7'
v8 = *( _WORD *)v7; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges_1/src/except.c:1813:17: error: use of undeclared identifier 'v7'
if ( *( _WORD *)v7 == 37 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges_1/src/except.c:1815:9: error: use of undeclared identifier 'v7'
rtint = v7[2].fld[0].rtint; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges_1/src/except.c:1822:16: error: use of undeclared identifier 'v7'
v5 = ( __int64)v7[2]; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges_1/src/except.c:1854:17: error: use of undeclared identifier 'v7'
if ( *pinsns == v7 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges_1/src/except.c:1856:14: error: use of undeclared identifier 'v7'
remove_insn( v7); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges_1/src/except.c:1864:22: error: use of undeclared identifier 'v7'
if ( !find_reg_note( v7, REG_EH_REGION, 0LL) ) 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges_1/src/except.c:1866:17: error: use of undeclared identifier 'v7'
if ( *( _WORD *)v7 == 34 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges_1/src/except.c:1870:27: error: use of undeclared identifier 'v7'
v14 = (  struct rtx_def *)v7[2]; 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges_1/src/except.c:1876:7: error: use of undeclared identifier 'v7'
v17 = v7[3].fld[0].rtx; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges_1/src/except.c:1878:1: error: use of undeclared identifier 'v7'
v7[3].fld[0].rtwint = ( __int64)alloc_EXPR_LIST( 23, v15, v17); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges_1/src/except.c:1881:17: error: use of undeclared identifier 'v7'
if ( *( _WORD *)v7 == 34 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges_1/src/except.c:1884:17: error: use of undeclared identifier 'v7'
v10 = ( __int64)v7[2]; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges_1/src/except.c:1887:41: error: expected expression
convert_from_eh_region_ranges_1( ( rtx *)( v10 + 8), v6, v5); 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges_1/src/except.c:1888:41: error: expected expression
convert_from_eh_region_ranges_1( ( rtx *)( *( _QWORD *)&v7[2] + 16LL), v6, v5); 
                                        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges_1/src/obj/except.o] Error 1
